<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background_1"
    tools:context=".CreateUser">

    <TextView
        android:id="@+id/createusertitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:text="Create Account"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/setcredentials"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/createusertitle"
        android:layout_marginStart="5dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="Enter your account credentials below"
        android:textColor="@color/white"
        android:textSize="13sp" />

    <!--    code for username field-->
    <EditText
        android:id="@+id/setusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setcredentials"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="10dp"
        android:drawableTint="#313131"
        android:hint="@string/username_hint"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/text_hint" />

    <!--    code for password field -->
    <EditText
        android:id="@+id/setpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setusername"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="#30ffffff"
        android:drawableLeft="@drawable/ic_baseline_https_24"
        android:drawablePadding="10dp"
        android:drawableTint="#313131"
        android:hint="@string/password"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textColorHint="@color/text_hint" />

    <!--    code for login button-->
    <Button
        android:id="@+id/signupbutton"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@id/setpassword"
        android:backgroundTint="@color/orange"
        android:text="sign up"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"/>


</RelativeLayout>
