<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/HomeTheme"
    android:background="@drawable/app_background_6"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/friends_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10sp"
        android:fontFamily="sans-serif-condensed"
        android:text="FRIENDS"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/mail_inbox_activity_button"
        android:layout_below="@id/friends_title"
        android:layout_marginTop="10dp">
        <ListView
            android:id="@+id/friends_fragment_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:choiceMode="singleChoice"
            android:listSelector="@color/light_grey"
            android:divider="@color/light_grey"
            android:dividerHeight="1sp"
            android:padding="15dp" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/mail_inbox_activity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="@color/baby_blue"
        app:srcCompat="@android:drawable/ic_dialog_email"
        tools:ignore="SpeakableTextPresentCheck" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/send_request_activity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="@color/baby_blue"
        app:srcCompat="@android:drawable/ic_menu_search"
        tools:ignore="SpeakableTextPresentCheck" />

</RelativeLayout>
