...
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:background="@drawable/empty_profile_pic"
        />

    <TextView
        android:id="@+id/username_text_grid"
        android:text="name"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@id/profile_pic"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
...
