...

        <Button
            android:id="@+id/event_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Events"
            app:layout_constraintEnd_toStartOf="@+id/follow_button"
            app:layout_constraintStart_toEndOf="@+id/daily_button"
            tools:layout_editor_absoluteY="0dp" />

        <Button
            android:id="@+id/follow_button"
            android:layout_width="wrap_content"
...
