...
    android:background="@drawable/app_background_6"
    android:theme="@style/HomeTheme"
    android:orientation="horizontal">


    <TextView
        android:id="@+id/inbox_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
...
