<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background_2"
    android:id="@+id/logincontainer"
    tools:context=".LogInActivity">

        <TextView
            android:id="@+id/app_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="50dp"
            android:drawableBottom="@drawable/ic_baseline_calendar_today_24"
            android:drawableTint="@color/white"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/logintitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_icon"
            android:layout_marginStart="80dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="80dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:typeface="normal" />


    <!--    code for username field-->
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_icon"
            android:layout_marginStart="30dp"
            android:layout_marginTop="130dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:background="#30ffffff"
            android:drawableLeft="@drawable/ic_baseline_person_outline_24"
            android:drawablePadding="10dp"
            android:drawableTint="#313131"
            android:focusableInTouchMode="true"
            android:hint="@string/username_hint"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/text_hint"
            android:textSize="18dp" />

    <!--    code for password field -->
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="#30ffffff"
            android:drawableLeft="@drawable/ic_baseline_https_24"
            android:drawablePadding="10dp"
            android:drawableTint="#313131"
            android:focusableInTouchMode="true"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/text_hint"
            android:textSize="18dp" />

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:id="@+id/forgotpassword"-->
<!--            android:text="@string/forgot_password"-->
<!--            android:layout_below="@id/password"-->
<!--            android:layout_marginStart="20dp"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:gravity="start"-->
<!--            android:textColor="@color/blue"-->
<!--            android:clickable="true" />-->

    <!--    code for login button-->
        <Button
            android:id="@+id/loginbutton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_below="@id/password"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/orange"
            android:textAllCaps="false"
            android:text="@string/log_in_button"
            android:textSize="17dp"/>

        <TextView
            android:id="@+id/newuser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginbutton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:clickable="true"
            android:text="@string/create_new_account"
            android:textSize="18dp"
            android:textColor="#6B6B6B" />


</RelativeLayout>
